2013-12-19  Tobias Brox  <tobias@redpill-linpro.com>
        * rpm: work in progress to build rpm files
	* archlinux/Makefile: allow for automatic build of PKGBUILD and upload to AUR
	* Makefile: Working on release-management through Makefile; ideally all the work involved with making a release should be handled by a simple make command.  Pardon for all the stupid mini-releases, need to do quite some testing here.
	* ChangeLog: Now with a ChangeLog file.  The entries will be used for the commit message when doing releases.

2013-09-06  Tobias Brox  <tobias@redpill-linpro.com>
	* thrash-protect.py: Got a mostly working prototype here - it has been tested in production, and it seems to do what it promises, and I'm happy with it, maybe the initial plan rewriting it in C is not really needed.

2013-07-29  Tobias Brox <tobias@redpill-linpro.com>
	* General: initial commit