@@ -1,5 +1,5 @@
-export prefix ::= /usr/
-export pkgname ::= "thrash-protect"
+export prefix = /usr/
+export pkgname = "thrash-protect"
 
 ## can't do "thrash-protect.py --version" since it's unsupported in python versions lower than 2.7.
 export version ::= $(shell grep '__version__.*=' thrash-protect.py | cut -f2 -d'"')
@@ -8,9 +8,8 @@ ChangeLog.recent: ChangeLog
 	perl -pe 'if (/^\d\d\d\d-\d\d-\d\d/) { $$q++; exit if $$q>1; }' ChangeLog > ChangeLog.recent
 
 install: thrash-protect.py
-	install "thrash-protect.py" "$(prefix)/sbin/thrash-protect"
-	[ -d "$(prefix)/lib/systemd/system" ] && install systemd/thrash-protect.service "$(prefix)/lib/systemd/system"
-	[ -d "$(prefix)/lib/systemd/system" ] || install systemv/thrash-protect "/etc/init.d/thrash-protect"
+	install "thrash-protect.py" $(prefix)/sbin/$(pkgname)
+	if [ -d $(prefix)/lib/systemd/system ]; then install systemd/thrash-protect.service $(prefix)/lib/systemd/system ; else install systemv/thrash-protect "/etc/init.d/thrash-protect" ; fi
 
 .tag.${version}: ChangeLog.recent
 	git status
