@@ -20,7 +20,7 @@ try:
 except NameError:
   FileNotFoundError=IOError
 
-__version__ = "0.5.3"
+__version__ = "0.5.4"
 __author__ = "Tobias Brox"
 __copyright__ = "Copyright 2013, Tobias Brox"
 __license__ = "GPL"
@@ -175,26 +175,9 @@ def unfreeze_something():
         log_unfrozen(pid_to_unfreeze)
         num_unfreezes += 1
 
-## Globals
-last_observed_pagefaults = get_pagefaults()
-last_scan_pagefaults = 0
-pagefault_by_pid = {}
-frozen_pids = []
-num_freezes = 0
-num_unfreezes = 0
-
-if __name__ == '__main__':
-    try:
-        import argparse
-        p = argparse.ArgumentParser(description="protect a linux host from thrashing")
-        p.add_argument('--version', action='version', version='%(prog)s ' + __version__)
-        args = p.parse_args()
-    except ImportError:
-        ## argparse is only available from 2.7 and up
-        args = None
-    thrash_protect(args)
-
 def thrash_protect(args=None):
+    global last_observed_pagefaults
+    global last_scan_pagefaults
     while True:
         current_pagefaults = get_pagefaults()
         if current_pagefaults - last_observed_pagefaults > pgmajfault_stop_threshold:
@@ -205,5 +188,24 @@ def thrash_protect(args=None):
             scan_processes()
         last_observed_pagefaults = current_pagefaults
         time.sleep(interval)
+
+if __name__ == '__main__':
+    ## Globals
+    last_observed_pagefaults = get_pagefaults()
+    last_scan_pagefaults = 0
+    pagefault_by_pid = {}
+    frozen_pids = []
+    num_freezes = 0
+    num_unfreezes = 0
+
+    try:
+        import argparse
+        p = argparse.ArgumentParser(description="protect a linux host from thrashing")
+        p.add_argument('--version', action='version', version='%(prog)s ' + __version__)
+        args = p.parse_args()
+    except ImportError:
+        ## argparse is only available from 2.7 and up
+        args = None
+    thrash_protect(args)
 
 
