@@ -1,5 +1,7 @@
 2013-12-19  Tobias Brox  <tobias@redpill-linpro.com>
-        * rpm: work in progress to build rpm files
+	* thrash-protecy.py: made support for --version at python2.7 and up, and split out the main logic into a subroutine.
+	* rpm: work in progress to build rpm files
+	* systemv: work in progress to build a working init-script
 	* archlinux/Makefile: allow for automatic build of PKGBUILD and upload to AUR
 	* Makefile: Working on release-management through Makefile; ideally all the work involved with making a release should be handled by a simple make command.  Pardon for all the stupid mini-releases, need to do quite some testing here.
 	* ChangeLog: Now with a ChangeLog file.  The entries will be used for the commit message when doing releases.
